--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 	templated.co @templatedco
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
 -->
-<html>
+<html lang="de">
 	<head>
-		<title>Solarize by TEMPLATED</title>
+		<title>TimeTraveler - Reisebüro | Home</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
+		<meta name="TimeTraveler ist ein Reisebüro. Unser Angebot gilt vor allem dem Zeitreisen. Die Reisen werden in Gruppen organisiert." content="" />
+		<meta name="Reisebüro Zeitreise zeitreisen Reisen Reise Zeit Mittelalter Römer Steinzeit Zukunft Si-Fi sifi Barock Kurztrips" content="" />
 		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
 		<script src="js/jquery.min.js"></script>
 		<script src="js/jquery.dropotron.min.js"></script>
