--- a/index.html
+++ b/index.html
@@ -32,34 +32,35 @@
 					<div class="container">
 							
 						<!-- Logo -->
-							<h1><a href="#" id="logo">Solarize</a></h1>
+							<h1><a href="#" id="logo">TimeTraveler</a></h1>
 						
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
 									<li class="active"><a href="index.html">Home</a></li>
 									<li>
-										<a href="">Dropdown</a>
+										<a href="#">Zeitalter</a>
 										<ul>
-											<li><a href="#">Lorem ipsum dolor</a></li>
-											<li><a href="#">Magna phasellus</a></li>
-											<li><a href="#">Etiam dolore nisl</a></li>
+											<li><a href="#">Steinzeit</a></li>
+											<li><a href="#">Römer</a></li>
+											<li><a href="#">Mittelalter</a></li>
+											<li><a href="#">Barock</a></li>
+											<li><a href="#">Zukunft</a></li>
 											<li>
-												<a href="">Phasellus consequat</a>
+												<a href="#">Kurztrips</a>
 												<ul>
-													<li><a href="#">Lorem ipsum dolor</a></li>
-													<li><a href="#">Phasellus consequat</a></li>
-													<li><a href="#">Magna phasellus</a></li>
-													<li><a href="#">Etiam dolore nisl</a></li>
-													<li><a href="#">Veroeros feugiat</a></li>
+													<li><a href="#">20'er</a></li>
+													<li><a href="#">30'er</a></li>
+													<li><a href="#">60'er</a></li>
+													<li><a href="#">70'er</a></li>
+													<li><a href="#">80'er</a></li>
 												</ul>
 											</li>
-											<li><a href="#">Veroeros feugiat</a></li>
 										</ul>
 									</li>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
+									<li><a href="left-sidebar.html">Galerie</a></li>
+									<li><a href="right-sidebar.html">Kontakt</a></li>
+									<!-- <li><a href="no-sidebar.html">No Sidebar</a></li> -->
 								</ul>
 							</nav>
 	
