--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
 			<!-- Banner -->
 				<div id="banner">
 					<section class="container">
-						<h2>Solarize</h2>
-						<span>Design by Templated</span>
-						<p>Pellentesque pede. Donec pulvinar ullamcorper metus. In eu odio at lectus pulvinar mollis. Vestibulum sem magna.</p>
+						<h2>TimeTraver</h2>
+						<span>Time to Travel</span>
+						<p>- Vergangenheit oder Zukunft -<br>Wofür entscheidest du dich?</p>
 					</section>
 				</div>
 
