Change Section Two

--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
 			<div class="wrapper style3">
 				<section class="container">
 					<header class="major">
-						<h2>Cras vitae metus aliNuam</h2>
+						<h2>"Zukunft ist die Zeit, in der man die ganze Vergangenheit kennen wird.<br>Solange man die Vergangenheit nur teilweise kennt, lebt man in der Gegenwart"</h2>
 					</header>
-					<p>Pellentesque pede. Donec pulvinar ullamcorper metus. In eu odio at lectus pulvinar mollis. Vestibulum sem magna, elementum vestibulum arcu.</p>
-					<a href="#" class="button alt">Nulla aluctus eleifend</a>
+					<p>Gabriel Laub</p>
+					<a href="#" class="button alt">Zu den Zeitaltern</a>
 				</section>
 			</div>
 
