--- a/index.html
+++ b/index.html
@@ -208,13 +208,13 @@
 					</div>
 				</section>
 			</div>
-
+z
 	<!-- Footer -->
 		<div id="footer">
 			<section class="container">
 				<header class="major">
-					<h2>Connect with us</h2>
-					<span class="byline">Integer sit amet pede vel arcu aliquet pretium</span>
+					<a href="#" class="button alt">Kontakt</a>
+					<span class="byline">Verbinde dich mit uns durch Raum und Zeit</span>
 				</header>
 				<ul class="icons">
 					<li class="active"><a href="#" class="fa fa-facebook"><span>Facebook</span></a></li>
