--- a/index.html
+++ b/index.html
@@ -181,29 +181,24 @@
 			<div class="wrapper style5">
 				<section id="team" class="container">
 					<header class="major">
-						<h2>Cras vitae metus aliNuam</h2>
-						<span class="byline">pulvinar mollis. Vestibulum sem magna, elementum vestibulum arcu</span>
+						<h2>Die Zeitgenossen</h2>
+						<span class="byline">Wir sind zu jeder Stunde für Sie da!</span>
 					</header>
 					<div class="row">
 						<div class="3u">
 							<a href="#" class="image"><img src="images/placeholder.png" alt=""></a>
-							<h3>Molly Millions</h3>
-							<p>In posuere eleifend odio quisque semper augue wisi ligula.</p>
+							<h3>Nina Fischer</h3>
+							<p>Geschäftsführerin<br>Management</p>
 						</div>
 						<div class="3u">
 							<a href="#" class="image"><img src="images/placeholder.png" alt=""></a>
-							<h3>Henry Dorsett Case</h3>
-							<p>In posuere eleifend odio quisque semper augue wisi ligula.</p>
+							<h3>Michelle Mann</h3>
+							<p>Geschäftsführerin<br>Marketing</p>
 						</div>
 						<div class="3u">
 							<a href="#" class="image"><img src="images/placeholder.png" alt=""></a>
-							<h3>Willis Corto</h3>
-							<p>In posuere eleifend odio quisque semper augue wisi ligula.</p>
-						</div>
-						<div class="3u">
-							<a href="#" class="image"><img src="images/placeholder.png" alt=""></a>
-							<h3>Linda Lee</h3>
-							<p>In posuere eleifend odio quisque semper augue wisi ligula.</p>
+							<h3>Penelope Powers</h3>
+							<p><br>Buchhaltung</p>
 						</div>
 					</div>
 				</section>
