Command Section Three

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 			</div>
 
 		<!-- Section Three -->
-			<div class="wrapper style4">
+			<!-- <div class="wrapper style4">
 				<section class="container">
 					<header class="major">
 						<h2>Cras vitae metus aliNuam</h2>
@@ -175,7 +175,7 @@
 						</div>
 					</div>
 				</section>
-			</div>
+			</div> -->
 		
 		<!-- Team -->
 			<div class="wrapper style5">
