Change/Add index.html
Add options to the nav. Change h3 in Section One. Change button in
Section Two.

--- a/index.html
+++ b/index.html
@@ -37,9 +37,13 @@
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
-									<li class="active"><a href="index.html">Home</a></li>
-									<li>
-										<a href="#">Zeitalter</a>
+									<li class="active"><a href="index.html">Home</a>
+										<ul>
+											<li><a href="#">Über uns</a></li>
+											<li><a href="#">Das Team</a></li>
+										</ul>
+									</li>
+									<li><a href="#">Zeitalter</a>
 										<ul>
 											<li><a href="#">Steinzeit</a></li>
 											<li><a href="#">Römer</a></li>
@@ -89,7 +93,7 @@
 							</header>
 						</div>
 						<div class="6u">
-							<h3>Suspendisse dictum porta</h3>
+							<h3>Über uns</h3>
 							<p>Donec leo. Vivamus fermentum nibh in augue. Praesent a lacus at urna congue rutrum. Nulla enim eros, porttitor eu, tempus id, varius non, nibh. Vestibulum imperdiet, magna nec eleifend semper augue mattis wisi maecenas ligula nunc lectus vestibulum euismod lacinia quam nisl.</p>
 							<a href="#" class="button">Zu den Zeitaltern</a>
 						</div>
@@ -104,7 +108,7 @@
 						<h2>"Zukunft ist die Zeit, in der man die ganze Vergangenheit kennen wird.<br>Solange man die Vergangenheit nur teilweise kennt, lebt man in der Gegenwart"</h2>
 					</header>
 					<p>Gabriel Laub</p>
-					<a href="#" class="button alt">Zu den Zeitaltern</a>
+					<a href="#" class="button alt">Zu unserer Galerie</a>
 				</section>
 			</div>
 
@@ -208,7 +212,7 @@ z
 		<div id="footer">
 			<section class="container">
 				<header class="major">
-					<a href="#" class="button alt">Kontakt</a>
+					<a href="#" class="button alt">Kontaktiere uns</a>
 					<span class="byline">Verbinde dich mit uns durch Raum und Zeit</span>
 				</header>
 				<ul class="icons">
