New colors to home

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ z
 		<div id="footer">
 			<section class="container">
 				<header class="major">
-					<a href="#" class="button alt">Kontaktiere uns</a>
+					<a href="#" class="button btn-footer">Kontaktiere uns</a>
 					<span class="byline">Verbinde dich mit uns durch Raum und Zeit</span>
 				</header>
 				<ul class="icons">
