Home margin and padding

--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
 			<div class="wrapper style3">
 				<section class="container">
 					<header class="major">
-						<h2>"Zukunft ist die Zeit, in der man die ganze Vergangenheit kennen wird.<br>Solange man die Vergangenheit nur teilweise kennt, lebt man in der Gegenwart"</h2>
+						<h2>"Zukunft ist die Zeit, in der man die ganze Vergangenheit kennen wird. Solange man die Vergangenheit nur teilweise kennt, lebt man in der Gegenwart"</h2>
 					</header>
-					<p>Gabriel Laub</p>
+					<p>~ Gabriel Laub</p>
 					<a href="#" class="button alt">Zu unserer Galerie</a>
 				</section>
 			</div>
@@ -189,17 +189,17 @@
 						<span class="byline">Wir sind zu jeder Stunde für Sie da!</span>
 					</header>
 					<div class="row">
-						<div class="3u">
+						<div class="4u">
 							<a href="#" class="image"><img src="images/placeholder.png" alt=""></a>
 							<h3>Nina Fischer</h3>
 							<p>Geschäftsführerin<br>Management</p>
 						</div>
-						<div class="3u">
+						<div class="4u">
 							<a href="#" class="image"><img src="images/placeholder.png" alt=""></a>
 							<h3>Michelle Mann</h3>
 							<p>Geschäftsführerin<br>Marketing</p>
 						</div>
-						<div class="3u">
+						<div class="4u">
 							<a href="#" class="image"><img src="images/placeholder.png" alt=""></a>
 							<h3>Penelope Powers</h3>
 							<p><br>Buchhaltung</p>
