Fill team profile placeholder

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 									<li class="active"><a href="index.html">Home</a>
 										<ul>
 											<li><a href="#">Über uns</a></li>
-											<li><a href="#">Das Team</a></li>
+											<li><a href="#team-anker">Das Team</a></li>
 										</ul>
 									</li>
 									<li><a href="#">Zeitalter</a>
@@ -182,6 +182,7 @@
 			</div> -->
 		
 		<!-- Team -->
+			<a name="team-anker"></a>
 			<div class="wrapper style5">
 				<section id="team" class="container">
 					<header class="major">
@@ -190,17 +191,17 @@
 					</header>
 					<div class="row">
 						<div class="4u">
-							<a href="#" class="image"><img src="images/placeholder.png" alt=""></a>
+							<a href="#" class="image"><img src="images/woman1.png" alt=""></a>
 							<h3>Nina Fischer</h3>
 							<p>Geschäftsführerin<br>Management</p>
 						</div>
 						<div class="4u">
-							<a href="#" class="image"><img src="images/placeholder.png" alt=""></a>
+							<a href="#" class="image"><img src="images/woman2.png" alt=""></a>
 							<h3>Michelle Mann</h3>
 							<p>Geschäftsführerin<br>Marketing</p>
 						</div>
 						<div class="4u">
-							<a href="#" class="image"><img src="images/placeholder.png" alt=""></a>
+							<a href="#" class="image"><img src="images/woman3.png" alt=""></a>
 							<h3>Penelope Powers</h3>
 							<p><br>Buchhaltung</p>
 						</div>
